[package]
name = "auth"
version = "0.0.7"
edition = { workspace = true }

[dependencies]
async-graphql = {version = "5.0.5", features = ["tracing", "secrecy"] }
async-graphql-actix-web = "5.0.5"
actix-web = { version = "4.3.0", default-features = false, features = ["macros"] }

tracing = "0.1.37"
secrecy = "0.8.0"
serde = "1.0.152"
